# DRF

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_coursesubscription.py  0004_alter_lesson_options.py  0005_course_last_notification_sent.py
nginx/: nginx.conf
users/: celery.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_payments.py  add_users.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_paymentcourses.py  0004_rename_paymentcourses_paymentcourse.py  0005_alter_paymentcourse_link.py  0006_alter_user_last_login.py
